@@ -11,8 +11,9 @@
     cat("Distance:", x$distance, "\n\n")
     cat("Dimensions:", x$ndim, "\n")
     cat("Stress:    ", x$stress, "\n")
-    if (inherits(x, "monoMDS") && x$isform == 2)
-        cat("(stress type 2)\n")
+    if (inherits(x, "monoMDS"))
+        cat("Stress type ", x$isform, ", ",
+            c("weak", "strong")[x$ities], " ties\n", sep = "")
     if (x$converged) 
         cat("Two convergent solutions found after", x$tries, 
             "tries\n")
